[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-bwt"
authors = [
  { name = "Kuba Serafinowski" },
]
description = "MCP server for Bing Webmaster Tools"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp[cli]==1.6.0",
    "httpx==0.27.1"
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.3"
]

[tool.hatch.build.targets.wheel]
packages = ["mcp-server-bwt"]

[tool.hatch.version]
path = "mcp-server-bwt/version.py"

[project.scripts]
mcp-server-bwt = "mcp-server-bwt.main:app"

[tool.pytest.ini_options]
pythonpath = "mcp-server-bwt"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".+test_"
]
