[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-bwt"
authors = [
  { name = "Kuba Serafinowski" },
]
description = "MCP server for Bing Webmaster Tools"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp==1.6.0",
    "bing-webmaster-tools==1.1.2"
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.3"
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_bwt"]

[tool.hatch.version]
path = "mcp_server_bwt/version.py"

[project.scripts]
mcp-server-bwt = "mcp_server_bwt.main:app"

[tool.pytest.ini_options]
pythonpath = "mcp_server_bwt"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".+test_"
]
